<resources>
    <string name="app_name">CustomView</string>
    <string name="menu">Menu</string>
    <string name="menu_introduce">路径菜单</string>
    <string name="loading_view">LoadingView</string>
    <string name="loading_view_introduce">仿花束直播加载动画</string>
    <string name="dialog_text">弹出框</string>
    <string name="rating_view">RatingView</string>
    <string name="rating_view_introduce">自定义星星评分控件</string>
    <string name="qq_step_view">QQStepView</string>
    <string name="step_view_introduce">仿QQ自定义计步器</string>
    <string name="loading58_view">Loading58</string>
    <string name="loading58_introduce">仿58同城数据加载</string>
    <string name="exchange">切换</string>
    <string name="ColorTrackTextView">ColorTrackTextView</string>
    <string name="textView_color_track">一个TextView两个颜色</string>
    <string name="draw_right">从右开始绘制</string>
    <string name="draw_left">从左开始绘制</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_text">仪表盘</string>
    <string name="start_page">RedBookStartPage</string>
    <string name="start_page_scroll">小红书启动页图片自动滚动</string>
    <string name="practice">Practice</string>
    <string name="clear_drawing">清除画板</string>
    <string name="drawingBoardView">DrawingBoardView</string>
    <string name="drawing_board_text">画板</string>
    <string name="circle_progress_bar">CircleProgressBar</string>
    <string name="circle_progress_bar_text">圆形进度条</string>
</resources>
