<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_introduce" />

        <Button
            android:id="@+id/btnLoadingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_view"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_view_introduce" />

        <Button
            android:id="@+id/btnRatingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_view"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_view_introduce" />
        <Button
            android:id="@+id/btnQQStepView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_step_view"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_view_introduce" />
        <Button
            android:id="@+id/btnLoading58"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading58_view"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading58_introduce" />
        <Button
            android:id="@+id/btnColorTrackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ColorTrackTextView"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_color_track" />
        <Button
            android:id="@+id/btnDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_text" />
    </LinearLayout>
</layout>