<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <com.al.custom_view.text_view_color_track.ColorTrackTextView
            android:id="@+id/tvColorTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:originColor="@color/colorPrimary"
            app:selectColor="@color/colorAccent"
            android:text="@string/app_name"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btnStartRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_right"/>
        <Button
            android:id="@+id/btnStartLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_left"/>

        <LinearLayout
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:gravity="center"
            android:orientation="horizontal" />


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</layout>